Fix Pro Preview Link and alignment of menu items; see: websharks/comment-mail#227

--- a/src/client-s/css/menu-pages.scss
+++ b/src/client-s/css/menu-pages.scss
@@ -679,7 +679,7 @@ Menu page heading styles.
   padding-bottom:             3em;
   margin-bottom:              2em;
   position:                   relative;
-  min-height:                 70px;
+  min-height:                 85px;
 }
 
 .comment-mail-menu-page .pmp-heading::after {
